--- a/package.json
+++ b/package.json
@@ -3,18 +3,19 @@
     "version": "0.0.1",
     "description": "VibeCheck using Transformers.js",
     "scripts": {
-      "build": "webpack",
-      "dev": "webpack --watch"
+        "build": "webpack",
+        "dev": "webpack --watch"
     },
     "type": "module",
     "author": "Xenova",
     "license": "MIT",
     "devDependencies": {
-      "copy-webpack-plugin": "^11.0.0",
-      "html-webpack-plugin": "^5.5.1",
-      "webpack": "^5.79.0"
+        "copy-webpack-plugin": "^11.0.0",
+        "html-webpack-plugin": "^5.5.1",
+        "webpack": "^5.79.0",
+        "webpack-cli": "^6.0.1"
     },
     "dependencies": {
-      "@xenova/transformers": "^2.0.0"
+        "@xenova/transformers": "^2.0.0"
     }
-  }
+}
